--- a/source/template/common/header.pug
+++ b/source/template/common/header.pug
@@ -18,5 +18,6 @@ header.header
     .header__title
         .header__title-pic--wrap
             img.header__title-pic(src="assets/img/main-title.png" alt="funeral home logo" title="piece of heaven funeral home")
+        .header__page-name
         h1.header__desc funeral and cremation services
 
