--- a/source/template/common/preplan_content.pug
+++ b/source/template/common/preplan_content.pug
@@ -1,5 +1,5 @@
 .preplan__wrap
-    .preplan__title pre-panning
+    .preplan__title Pre-panning
     .preplan__content
         p.
             There’s a lot that goes into planning a funeral, but making those
