--- a/source/style/common/920.scss
+++ b/source/style/common/920.scss
@@ -82,7 +82,9 @@
   }
 
   //  -------------------------------------------------------   about
-
+  .about__title-desc{
+    width: 90%;
+  }
   .about__bg-slider, .about__bg-slider--limo, .about__bg-slider--lobby{
     display: none;
   }
