--- a/source/template/common/about_content.pug
+++ b/source/template/common/about_content.pug
@@ -3,7 +3,7 @@ section.about__content
         .about__top-desc
             .about__title About us
             .about__title-desc
-                .about__title-desc-p Let us give you peace fo mind in knowing we can coordinate and plan every aspect of your loved one's funeral. We will take care of everything and work with you to honor their wishes
+                .about__title-desc-p Piece fo Heaven is a family owned and operated Funeral home since 2003. Let us give you peace fo mind in knowing we can coordinate and plan every aspect of your loved one's funeral. We will take care of everything and work with you to honor their wishes
         .about__slider-small_device
             ul.about__slider-small_device--list
                 li.about__slider-small_device--item.active-slide
