--- a/source/template/common/footer.pug
+++ b/source/template/common/footer.pug
@@ -1,7 +1,7 @@
 .footer
     .footer__wrap
         .footer__top
-            .footer__menu
+            ul.footer__menu
                 -
                     var footerMenuData = [
                     ['home', 'index.html'],
@@ -29,4 +29,5 @@
         .footer_btm
             .footer__btm-company-name &#169; Piece of Heaven funeral and cremation services, LLC
             .footer__copyrights   Created by Anatolii Tupkalo for "Piece of Heave"
+    a(href="/obits-single.html").link-to-single  obits-single
 
