--- a/source/template/common/main_header.pug
+++ b/source/template/common/main_header.pug
@@ -2,10 +2,8 @@ header.main_header
     .main_header__container
         .main_header__bg
             picture
-                source(srcset="/assets/img/main_header_bg_xxl.jpg" media="(min-width: 1200px)")
-                source(srcset="/assets/img/header_bg-l.jpg" media="(min-width: 920px)")
-                source(srcset="/assets/img/header_bg-s.jpg" media="(min-width: 768px)")
-                img.main_header__bg-pic(src="assets/img/header_bg-xs.jpg" alt="heaven")
+                source(srcset="/assets/img/bg.jpg" media="(min-width: 920px)")
+                img.main_header__bg-pic(src="assets/img/bg_s.jpg" alt="heaven")
         .top_line
             .top_line__content
                 .top_line__phone
@@ -22,8 +20,9 @@ header.main_header
                     source(srcset="/assets/img/main-title.png" media="(min-width: 768px)")
                     img.main_header__title-pic(src="assets/img/main-title.png" alt="funeral home logo" title="funeral and cremation services")
             h1.main_header__title-maindesc Funeral home
-            h2.main_header__title-secdesc funeral and cremation services
-            .main_header__title-slogan Call us and we will take care of all your difficulties
+            h2.main_header__title-secdesc affordable funeral and cremation services
+        .header__arrow-down
+            img.header__arrow-down-img(src="assets/img/icons/arrow_down.png" alt="arrow down")
 
 
 
