--- a/source/style/common/480.scss
+++ b/source/style/common/480.scss
@@ -14,10 +14,6 @@
   .main_header__title-maindesc{
     margin-bottom: 5px;
   }
-  .header__desc{
-    padding: 0 10px;
-    text-align: center;
-  }
   .main_header__title-secdesc{
     font-size: 12px;
   }
@@ -64,8 +60,9 @@
     padding: 20px 5px;
   }
   .about__title-desc{
-    font-size: 26px;
-    line-height: 32px;
+    width: 98%;
+    font-size: 20px;
+    line-height: 28px;
   }
   .about__employee-picwrap{
     float: none;
