--- a/source/style/common/home_content.scss
+++ b/source/style/common/home_content.scss
@@ -1,61 +1,67 @@
-.home_obits{
+.home__content{
   position: relative;
 }
-.home__main-desc{
-  padding: 75px 0;
-  box-sizing: border-box;
-  width: 70%;
-  margin: 0 auto;
-}
-.home__main-title{
-  opacity: .1;
-  transition: 2s;
+.home__main-tile{
   text-align: center;
   @include font(42px, $title, $gray);
-  line-height: 70px;
+  padding: 90px 0;
 }
-.home__direct-links-wrap{
-  padding: 75px 0;
+.home__top-title{
+  text-align: left;
+  background-image: url("/assets/img/bg.png");
+  background-size: cover;
+}
+.home__top-title-wrap{
+  margin: 0 auto;
+  width: 60%;
+  padding: 120px 0;
+}
+.top-title__desc{
+  @include font(28px, $text, $gray);
+  margin-bottom: 20px;
+}
+.top-title__desc-text{
+  font-weight: 200;
+  @include font(20px, $text, $gray);
+  line-height: 26px;
+  margin-bottom: 50px;
+}
+.top-title__buttons{
+  @include flex(row, flex-start, center);
+}
+.top-title__link {
+  padding: 7px 25px;
+  @include font(20px, $text, $blue);
+  border: solid 1px $blue;
+  transition: .3s;
+
+  &:hover {
+    background: $blue;
+    color: #fff;
+  }
+}
+.top-title__link--margin{
+  margin-left: 30px;
+}
+
+
+.obits__slider-wrap{
+  width: 80%;
   margin: 0 auto;
   @include flex(row, center, center);
 }
-.home__direct-link{
-  cursor: pointer;
-  @include font(26px, $text, $blue);
-  padding: 7px 20px;
-  background: transparent;
-  border: 1px solid $blue;
-  margin-left: 10px;
-  &:hover{
-    background: $blue;
-    color: #fff;
-    box-shadow: 0px 0px 6px 4px rgba(0, 0, 255, .2);
-  }
-}
 
-.direction__arrow-wrap{
-  position: relative;
-  @include flex(row, center, center);
-}
-.direction__arrow{
-  width: 20px;
-  height: 20px;
-}
-.arrow__pic{
-  width: 100%;
-  height: 100%;
-}
 .obits__home-title{
-  @include font(32px, $title, $gray);
+  @include font(42px, $title, $gray);
   text-align: center;
-  padding: 20px;
+  padding: 60px 0 60px 0;
 }
 .home-obits__list-wrap{
   width: 96%;
   min-height: 600px;
   transform: translateX(2%);
   @include flex(row, center, center);
-  margin-bottom: 50px;
+  margin-bottom: 90px;
   position: relative;
   overflow: hidden;
 }
@@ -129,8 +135,7 @@
 
 .obit__firstname, .obit__lastname{
   padding: 0 15px;
-  @include font (24px, $title, $gray);
-  font-weight: bold;
+  @include font (24px, $text, $gray);
 }
 
 .obit_date{
@@ -145,7 +150,7 @@
 .obit__link{
   font-size: 18px;
   padding: 7px 20px;
-  border: 2px solid $blue;
+  border: 1px solid $blue;
   color: $blue;
   margin-bottom: 20px;
   transition-duration: .3s;
