--- a/source/style/common/main_header.scss
+++ b/source/style/common/main_header.scss
@@ -1,5 +1,5 @@
 .main_header__container{
-  min-height: 970px;
+  min-height: 1020px;
 }
 .main_header__bg{
   position: absolute;
@@ -59,28 +59,39 @@
 .main_header__title-picwrap{
   width: 70%;
   margin: 0 auto;
+  padding: 20px 0 40px 0;
 }
 .main_header__title-pic{
   width: 100%;
 }
 .main_header__title{
+  min-height: 50vh;
   text-align: center;
-  padding: 5px 0 40px 0;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.5);
 }
+.main_header__title-wrap{
+  max-height: 600px;
+}
 .main_header__title-maindesc{
-  min-height: 60px;
   opacity: 0;
-  @include font(32px, $title, #fff);
+  @include font(36px, $title, #fff);
+  margin-bottom: 15px;
 }
 .main_header__title-secdesc{
-  min-height: 40px;
   @include font(16px, $text, #fff);
-  margin-bottom: 100px;
   opacity: 0;
 }
-.main_header__title-slogan{
-  @include font(28px, $text, #fff);
-  opacity: 0;
+.header__arrow-down{
+  position: absolute;
+  right: 50%;
+  margin-left: -20px;
+  bottom: 20px;
+  width: 40px;
+  height: 30px;
+  transition: .3s;
 }
+.header__arrow-down-img{
+  padding: 5px 5px;
+  width: 100%;
+ }
