--- a/source/style/common/menu.scss
+++ b/source/style/common/menu.scss
@@ -27,7 +27,7 @@
   }
 }
 .menu-item-active{
-  border-bottom: 4px solid #FFB91F;
+  background: #ce8a47;
 }
 .pseudo_element{
   position: absolute;
@@ -41,7 +41,7 @@
 }
 .menu__link{
   display: block;
-  padding: 7px 0;
+  padding: 8px 0 6px 0;
   @include font(18px, $text, #fff);
   transition-duration: .3s;
   &:hover{
