--- a/source/template/_template.pug
+++ b/source/template/_template.pug
@@ -13,15 +13,13 @@ html
         <meta content="width=device-width, initial-scale=1" name="viewport">
         <meta content="ie=edge" http-equiv="x-ua-compatible">
 
-        link(href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet")
-        link(href="https://fonts.googleapis.com/css?family=Open+Sans:300&display=swap" rel="stylesheet")
-        link(rel="shortcut icon" href="assets/img/icons/favicon.png")
-        link(href="https://fonts.googleapis.com/css?family=Raleway:300&display=swap" rel="stylesheet")
-        link(href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet")
+        link(href="https://fonts.googleapis.com/css?family=Lora:wght@600&display=swap" rel="stylesheet")
+        link(href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet")
         link(rel="shortcut icon" href="assets/img/icons/favicon.png")
         link(rel='stylesheet' href='/assets/css/foundation.css')
         link(rel='stylesheet' href='/assets/css/app.css')
         script(src='/assets/js/anime.min.js')
+        script(src='/assets/js/app.js' defer)
         script(src=`${jsfileName}` defer)
         script(src=`${map}` defer)
 
