--- a/source/template/common/home_content.pug
+++ b/source/template/common/home_content.pug
@@ -1,44 +1,33 @@
-section.home_obits
-    .home__main-desc
-        h3.home__main-title    Piece fo Heaven is a family owned and operated Funeral home since 2003
-        .home__direct-links-wrap
-            a.home__direct-link(href="/services.html") what we offer
-            a.home__direct-link(href="/pre_planning.html") go to pre-plan
-            a.home__direct-link(href="/contacts.html") get in touch
-        h3.home__main-title  Contact us today if you have experienced a loss we put your mind in peace.
-    include ../common/under_menu
+section.home__content
+    h3.home__main-tile Welcome to Piece fo Heaven Funeral Home
+    .home__top-title
+        .home__top-title-wrap
+            .top-title__desc Contact us today if you have experienced a loss and we put your mind in peace.
+            .top-title__desc-text Piece fo Heaven is a family owned and operated Funeral home since 2003. It is never easy to lose a loved one let us give you peace fo mind in knowing we can coordinate and plan every aspect of your loved one's funeral. We will take care of everything and work with you to honor their wishes
+            .top-title__buttons
+                a(href="/services.html").top-title__link  what we offer
+                a(href="/obits.html").top-title__link.top-title__link--margin up coming services
     .obits__home-title Recent obituaries
-    .direction__arrow-wrap
-        .direction__arrow
-            img(src="/assets/img/icons/direct_arrow.png" alt="funeral obituaries direction arrow").arrow__pic
-        .direction__arrow
-            img(src="/assets/img/icons/direct_arrow.png" alt="funeral obituaries direction arrow").arrow__pic
-        .direction__arrow
-            img(src="/assets/img/icons/direct_arrow.png" alt="funeral obituaries direction arrow").arrow__pic
-        .direction__arrow
-            img(src="/assets/img/icons/direct_arrow.png" alt="funeral obituaries direction arrow").arrow__pic
-        .direction__arrow
-            img(src="/assets/img/icons/direct_arrow.png" alt="funeral obituaries direction arrow").arrow__pic
-        .direction__arrow
-    .home-page__obits-arrow-left
-        img.obits__arrow-icon(src="assets/img/icons/obits_slide-l.png" alt="arrow left")
-    .home-page__obits-arrow-right
-        img.obits__arrow-icon(src="assets/img/icons/obits_slide-r.png" alt="arrow left")
-    .home-obits__list-wrap
-        img.obits__list-bg-left(src="assets/img/home_obits_bg.png" alt="funeral page background")
-        ul.home_obits__list
-            li.home_obits__item
-                .home_obits__item-innerwrap
-            li.home_obits__item
-                .home_obits__item-innerwrap
-            li.home_obits__item
-                .home_obits__item-innerwrap
-            li.home_obits__item
-                .home_obits__item-innerwrap
-            li.home_obits__item
-                .home_obits__item-innerwrap
-            li.home_obits__item
-                .home_obits__item-innerwrap
-        img.obits__list-bg(src="assets/img/home_obits_bg_r.png" alt="funeral page background")
+    .obits__slider-wrap
+        .home-page__obits-arrow-left
+            img.obits__arrow-icon(src="assets/img/icons/obits_slide-l.png" alt="arrow left")
+        .home-page__obits-arrow-right
+            img.obits__arrow-icon(src="assets/img/icons/obits_slide-r.png" alt="arrow left")
+        .home-obits__list-wrap
+            img.obits__list-bg-left(src="assets/img/home_obits_bg.png" alt="funeral page background")
+            ul.home_obits__list
+                li.home_obits__item
+                    .home_obits__item-innerwrap
+                li.home_obits__item
+                    .home_obits__item-innerwrap
+                li.home_obits__item
+                    .home_obits__item-innerwrap
+                li.home_obits__item
+                    .home_obits__item-innerwrap
+                li.home_obits__item
+                    .home_obits__item-innerwrap
+                li.home_obits__item
+                    .home_obits__item-innerwrap
+            img.obits__list-bg(src="assets/img/home_obits_bg_r.png" alt="funeral page background")
 
 
