--- a/source/template/common/obits_content.pug
+++ b/source/template/common/obits_content.pug
@@ -6,61 +6,31 @@ section.obits__content
             input.search__btn(type="submit" value="find obituary")
         .obits__search-worning * this obituaries list contains date for last 12 months only
     .obits__container
-        .obits__item#zorya_gr
-            .obits__info-wrap
-                .obits__pic-wrap
-                    img.obits__pic(src="/assets/img/zorya.jpg" alt="")
-                .obits__info
-                    .obits__info-top
-                        .obits__info-title In loving memory of
-                        .obits__info-name Zorya Grishovich
-                        .obits__info-year 1936-2019
-                    .obits__info-btm
-                        .obits__info-btm-wrap
-                            .obits__info-date--class passed away:
-                            .obits__info-date 06/16/2019
-                        .obits__info-btm-wrap
-                            .obits__info-cemetery--class Cemetery:
-                            .obits__info-cemetery Emanual
-            .obits__item-text
-                p.
-                    some text and description for deceased
-                    some text deceased and description for
-                    some text and description some text and description
-                    some text and description some text and description some text
-                    and description for deceased
-                    some text deceased and
-                    description some text and description
-                    some text and description some text and description some text
-                    and description for deceased
-                    some text deceased and
-        .obits__item#stanislav__zy
-            .obits__info-wrap
-                .obits__pic-wrap
-                    img.obits__pic(src="assets/img/stanislav.jpg" alt="")
-                .obits__info
-                    .obits__info-top
-                        .obits__info-title In loving memory of
-                        .obits__info-name Stanislav Zyumchenko
-                        .obits__info-year 1950-2019
-                    .obits__info-btm
-                        .obits__info-btm-wrap
-                            .obits__info-date--class passed away:
-                            .obits__info-date 06/16/2019
-                        .obits__info-btm-wrap
-                            .obits__info-cemetery--class Cemetery:
-                            .obits__info-cemetery Emanual
-            .obits__item-text
-                p.
-                    some text and description for deceased
-                    some text deceased and description for
-                    some text and description some text and description
-                    some text and description some text and description some text
-                    and description for deceased
-                    some text deceased and
-                    description some text and description
-                    some text and description some text and description some text
-                    and description for deceased
-                    some text deceased and
+        ul.obits__list
+            -
+                var obitslistData = [
+                    ['/assets/img/zorya.jpg', 'First', 'last', '/obits-single.html'],
+                    ['/assets/img/zorya.jpg', 'first', 'last', '/obits-single.html'],
+                    ['/assets/img/zorya.jpg', 'first', 'last', '/obits-single.html'],
+                    ['/assets/img/zorya.jpg', 'first', 'last', '/obits-single.html'],
+                    ['/assets/img/zorya.jpg', 'first', 'last', '/obits-single.html'],
+                    ['/assets/img/zorya.jpg', 'first', 'last', '/obits-single.html'],
+                    ['/assets/img/zorya.jpg', 'first', 'last', '/obits-single.html'],
+                    ['/assets/img/zorya.jpg', 'first', 'last', '/obits-single.html'],
+                    ['/assets/img/zorya.jpg', 'first', 'last', '/obits-single.html'],
+                    ['/assets/img/zorya.jpg', 'first', 'last', '/obits-single.html'],
+                    ['/assets/img/zorya.jpg', 'first', 'last', '/obits-single.html'],
+                    ['/assets/img/zorya.jpg', 'first', 'last', '/obits-single.html'],
+                ];
+
+            each item in obitslistData
+                li.obits__list-item
+                    .obits__list-img-wrap
+                        img(src=`${item[0]}`).obits__list-img
+                    .obits__list-firstname #{item[1]}
+                    .obits__list-lastname #{item[2]}
+                    .obits__list-links-wrap
+                        a(href=`${item[3]}`).obits__list-link view
+
 
 
