--- a/source/template/common/pop-up_menu.pug
+++ b/source/template/common/pop-up_menu.pug
@@ -1,6 +1,6 @@
 .popup_container
     ul.popup_menu
-        .popup_menu__cross
+        li.popup_menu__cross
             img.popup_menu__cross-icon(src="assets/img/icons/cros.png" alt="close icon")
         -
             var popupData = [
