--- a/source/template/pages/contacts.pug
+++ b/source/template/pages/contacts.pug
@@ -8,7 +8,7 @@ block content
     .popup_menu__burger
         img.popup_menu__burger-icon(src="assets/img/icons/burger_w.png" alt="menu icon")
     include ../common/pop-up_menu
-    include ../common/header
+    include ../common/main_header
     .main-container
         include ../common/menu
         include ../common/contacts_content
