--- a/source/template/common/obits_content.pug
+++ b/source/template/common/obits_content.pug
@@ -3,7 +3,7 @@ section.obits__content
     .obits__serch
         form.searching-form
             input.search_input(type="text" placeholder="serch" name="search")
-            input.search__btn(type="submit" value="find obituary")
+            button.search__btn find obituary
         .obits__search-worning * this obituaries list contains date for last 12 months only
     .obits__container
         ul.obits__list
