--- a/source/template/pages/obits-single.pug
+++ b/source/template/pages/obits-single.pug
@@ -26,13 +26,13 @@ block content
                         .obits-wishes__inner-container
                             .obits-wishes__name.obits-wishes__item  Name
                             .obits-wishes__date.obits-wishes__item   00/00/0000
-                            .obits-wihses__text.obits-wishes__item   Text, Text, Text
+                            .obits-wishes__text.obits-wishes__item   Text, Text, Text
                         .obits-wishes__inner-container
                             .obits-wishes__name.obits-wishes__item   Name
                             .obits-wishes__date.obits-wishes__item   00/00/0000
-                            .obits-wihses__text.obits-wishes__item   Text, Text, Text Text, Text, Text some text Text some text Text, Text, Text Text, Text, Text some text Text some text Text, Text, Text Text, Text, Text some text Text some text Text, Text, Text Text, Text, Text some text Text some text Text, Text, Text Text, Text, Text some text Text some text Text, Text, Text Text, Text, Text some text Text some text Text, Text, Text Text, Text, Text some text Text some text
+                            .obits-wishes__text.obits-wishes__item   Text, Text, Text Text, Text, Text some text Text some text Text, Text, Text Text, Text, Text some text Text some text Text, Text, Text Text, Text, Text some text Text some text Text, Text, Text Text, Text, Text some text Text some text Text, Text, Text Text, Text, Text some text Text some text Text, Text, Text Text, Text, Text some text Text some text Text, Text, Text Text, Text, Text some text Text some text
         .obits-bg
-            .obits-form__title leave your sympathy
+            .obits-form__title Leave your sympathy
             form.obits-wishes-form(id="obits-sympathy-form")
                 input(type="text" name="name" placeholder="your name").sympathy__name-imput
                 textarea(name="sympathy-text" placeholder="write your words here").sympathy__text
