--- a/source/style/common/920.scss
+++ b/source/style/common/920.scss
@@ -16,8 +16,14 @@
   .top_line__content{
     padding: 10px 80px;
   }
+ .main_header__title{
+   height: 380px;
+ }
   .main_header__title-picwrap{
     width: 96%;
+  }
+  .header__arrow-down{
+    display: none;
   }
   .contact__list{
     width: 80%;
@@ -28,17 +34,11 @@
   .popup_menu__burger{
     display: block;
   }
-  .under_menu__icon-box{
-    width: 35px;
-    height: 35px;
+  .home__top-title-wrap{
+    width: 80%;
   }
-  .under_menu__title{
-    margin-left: 10px;
-    font-size: 18px;
-  }
-  .main_header__title-maindesc{
-    min-height: 40px;
-    font-size: 22px;
+  .home__top-services{
+    width: 80%;
   }
   .footer-menu__item{
     padding: 5px;
@@ -76,12 +76,31 @@
     top: 98%;
   }
   //----------------------------------------------------obits
-
+  .obits__title{
+    margin-bottom: 0;
+  }
+  .upcoming__title{
+     padding: 60px 0;
+  }
   .obits__info-btm-wrap{
     width: 100%;
   }
-
-  //  -------------------------------------------------------   about
+  .obits__upcoming{
+    padding-bottom: 60px;
+  }
+  .obits-card__title{
+    padding-top: 30px;
+  }
+  .obits-card__title{
+    width: 96%;
+  }
+  .obits-form__title{
+    padding: 60px 0 30px 0;
+  }
+  .obits-wishes-form{
+    width: 70%;
+  }
+    //  -------------------------------------------------------   about
   .about__title-desc{
     width: 90%;
   }
