--- a/source/style/common/obits-content.scss
+++ b/source/style/common/obits-content.scss
@@ -1,6 +1,9 @@
 .obits__content{
-  background-image: url("/assets/img/bg.png");
-  background-size: cover;
+  background-image: url("/assets/img/obits_bg.png");
+  background-repeat: repeat;
+  border-top: 1px solid #cccccc;
+  width: 96%;
+  margin: 0 auto;
 }
 //----------------------------------------------------------------  Up coming
 .obits__upcoming{
@@ -9,7 +12,7 @@
 .upcoming__title{
   text-align: center;
   @include font(42px, $title, $gray);
-  padding: 120px 0 60px 0;
+  padding: 90px 0 60px 0;
 }
 .obits__title{
   @include font(48px, $title, $gray);
@@ -44,6 +47,7 @@
 .upcoming__link--flowers, .upcoming__link--contacts{
   padding: 7px 25px;
   @include font(20px, $text, $blue);
+  box-shadow: 0 0 8px 2px rgba(0, 0, 0, .2);
   border: solid 1px $blue;
   transition: .3s;
   &:hover {
@@ -94,9 +98,9 @@
   flex-wrap: wrap;
 }
 .obits__list-item{
+  background: #ffffff;
   width: 300px;
-  margin-left: 20px;
-  margin-bottom: 20px;
+  margin: 10px 5px;
   border: 1px solid #7a7979;
   padding: 3px;
 }
