--- a/source/template/common/home_content.pug
+++ b/source/template/common/home_content.pug
@@ -7,14 +7,30 @@ section.home__content
             .top-title__buttons
                 a(href="/services.html").top-title__link  what we offer
                 a(href="/obits.html").top-title__link.top-title__link--margin up coming services
+        .home__top-services
+            .home__top-services-wrap
+                .home__top-services-icon-wrap
+                    img.home__top-services-icon(src="assets/img/icons/is.png" alt="international funeral shipment")
+                .home__top-services-text International shipment
+            .home__top-services-wrap
+                .home__top-services-icon-wrap
+                    img.home__top-services-icon(src="assets/img/icons/ww.png" alt="all religion funeral")
+                .home__top-services-text Any religion services
+            .home__top-services-wrap
+                .home__top-services-icon-wrap
+                    img.home__top-services-icon(src="assets/img/icons/m.png" alt="memorial design")
+                .home__top-services-text Memorial design
     .obits__home-title Recent obituaries
     .obits__slider-wrap
         .home-page__obits-arrow-left
-            img.obits__arrow-icon(src="assets/img/icons/obits_slide-l.png" alt="arrow left")
+            .obits__arrow-icon-wrap
+                img.obits__arrow-icon(src="assets/img/icons/obits_slide-l.png" alt="arrow left")
         .home-page__obits-arrow-right
-            img.obits__arrow-icon(src="assets/img/icons/obits_slide-r.png" alt="arrow left")
+            .obits__arrow-icon-wrap
+                img.obits__arrow-icon(src="assets/img/icons/obits_slide-r.png" alt="arrow left")
         .home-obits__list-wrap
-            img.obits__list-bg-left(src="assets/img/home_obits_bg.png" alt="funeral page background")
+            .obits__arrow-icon-wrap
+                img.obits__list-bg-left(src="assets/img/home_obits_bg.png" alt="funeral page background")
             ul.home_obits__list
                 li.home_obits__item
                     .home_obits__item-innerwrap
