--- a/source/template/common/main_header.pug
+++ b/source/template/common/main_header.pug
@@ -2,8 +2,9 @@ header.main_header
     .main_header__container
         .main_header__bg
             picture
-                source(srcset="/assets/img/bg.jpg" media="(min-width: 920px)")
-                img.main_header__bg-pic(src="assets/img/bg_s.jpg" alt="heaven")
+                source(srcset="/assets/img/bg.jpg" media="(min-width: 1200px)")
+                source(srcset="/assets/img/bg_s.jpg" media="(min-width: 920px)")
+                img.main_header__bg-pic(src="assets/img/bg_xs.jpg" alt="heaven")
         .top_line
             .top_line__content
                 .top_line__phone
