--- a/source/style/common/768.scss
+++ b/source/style/common/768.scss
@@ -175,6 +175,9 @@
   .services__tabs-item{
     font-size: 18px;
   }
+  .services__main-section-text--paddingtop{
+    padding-top: 10px;
+  }
   .services__tabs-title{
     padding: 10px;
   }
