--- a/source/template/common/services_content.pug
+++ b/source/template/common/services_content.pug
@@ -1,24 +1,26 @@
 section.services__content
     .services__title Services
     .services__main-desc
-        .services__main-section-text
+        .services__main-section-text.services__main-section-text--paddingtop
             p.
                 Our caring and professional staff are here to support you. We offer a range of personalized services
                 to suit your family’s wishes and requirements. Whether it is a traditional casket funeral or cremation
                 with memorial service, you can count on us to assist you every step of the way.
         ul.services__hilight-list
-            li.services__hilight-list-item -  Basic burial $1995 -
-            li.services__hilight-list-item - Basic cremation $995-
-            li.services__hilight-list-item - We accept Life Insurance Policies and Social Security Death Benefits -
+            li.services__hilight-list-item Basic burial
+                strong $1995
+            li.services__hilight-list-item Basic cremation
+                strong $995
+            li.services__hilight-list-item  We accept Life Insurance Policies and Social Security Death Benefits
         .services__main-section-text
             p.
                 We offer a complete range of high-quality services that are tailored to your family’s individual needs.
                 Whether in our beautiful on-site Chapel or in your own house of worship, we will be there to coordinate
                 all services and arrangements.
         ul.services__hilight-list
-            li.services__hilight-list-item - Jewish funeral packages -
-            li.services__hilight-list-item - Christian funeral packages -
-            li.services__hilight-list-item - Cremation packages -
+            li.services__hilight-list-item  Jewish funeral packages
+            li.services__hilight-list-item  Christian funeral packages
+            li.services__hilight-list-item  Cremation packages
         .services__main-section-text
                 p.
                     Our staff is professionally trained in assisting all faiths and cultures.
