--- a/source/template/pages/obits-single.pug
+++ b/source/template/pages/obits-single.pug
@@ -18,7 +18,7 @@ block content
             .obits-card__right
                 .obits-card__info
                     .obits-card__title In loving memory of
-                    .obits-card__name   name:
+                    .obits-card__name   name
                     .obits-card__dates  date
                     .obits-card__cemetery  Emanuel
                 .obits-wishes
