--- a/source/style/common/obits-single.scss
+++ b/source/style/common/obits-single.scss
@@ -84,6 +84,7 @@
 .sympathy__submit{
   background: transparent;
   cursor: pointer;
+  box-shadow: 0 0 8px 2px rgba(0, 0, 0, .2);
   padding: 8px 64px;
   @include font(20px, $text, $blue);
   border: solid 1px $blue;
@@ -95,7 +96,8 @@
   }
 }
 .sympathy__name-imput, .sympathy__text{
+  border: 2px solid #cccccc;
   &:hover{
-    border: 1px solid $blue;
+    border: 2px solid $blue;
   }
 }
