--- a/source/template/_template.pug
+++ b/source/template/_template.pug
@@ -14,7 +14,7 @@ html
         <meta content="ie=edge" http-equiv="x-ua-compatible">
 
         link(href="https://fonts.googleapis.com/css?family=Lora:wght@600&display=swap" rel="stylesheet")
-        link(href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet")
+        link(href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap"  rel="stylesheet")
         link(rel="shortcut icon" href="assets/img/icons/favicon.png")
         link(rel='stylesheet' href='/assets/css/foundation.css')
         link(rel='stylesheet' href='/assets/css/app.css')
