--- a/source/template/common/home_content.pug
+++ b/source/template/common/home_content.pug
@@ -25,25 +25,38 @@ section.home__content
         .home-page__obits-arrow-left
             .obits__arrow-icon-wrap
                 img.obits__arrow-icon(src="assets/img/icons/obits_slide-l.png" alt="arrow left")
+        .home-obits__list-wrap
+            .obits__item-bg-wrap.obits__item-bg-wrap--left
+                img.obits__list-bg(src="assets/img/home_obits_bg.png" alt="funeral page background")
+            ul.home_obits__list
+                li.home_obits__item
+                    .obit__img-wrap
+                        img.obit__img
+                    .obit__firstname
+                    .obit__lastname
+                    .obit__date
+                    .obit__link-wrap
+                        a.obit__link view
+                li.home_obits__item.home_obits__item--middle
+                    .obit__img-wrap
+                        img.obit__img
+                    .obit__firstname
+                    .obit__lastname
+                    .obit__date
+                    .obit__link-wrap
+                        a.obit__link view
+                li.home_obits__item
+                    .obit__img-wrap
+                        img.obit__img
+                    .obit__firstname
+                    .obit__lastname
+                    .obit__date
+                    .obit__link-wrap
+                        a.obit__link view
+            .obits__item-bg-wrap.obits__item-bg-wrap--right
+                img.obits__list-bg(src="assets/img/home_obits_bg_r.png" alt="funeral page background")
         .home-page__obits-arrow-right
             .obits__arrow-icon-wrap
                 img.obits__arrow-icon(src="assets/img/icons/obits_slide-r.png" alt="arrow left")
-        .home-obits__list-wrap
-            .obits__arrow-icon-wrap
-                img.obits__list-bg-left(src="assets/img/home_obits_bg.png" alt="funeral page background")
-            ul.home_obits__list
-                li.home_obits__item
-                    .home_obits__item-innerwrap
-                li.home_obits__item
-                    .home_obits__item-innerwrap
-                li.home_obits__item
-                    .home_obits__item-innerwrap
-                li.home_obits__item
-                    .home_obits__item-innerwrap
-                li.home_obits__item
-                    .home_obits__item-innerwrap
-                li.home_obits__item
-                    .home_obits__item-innerwrap
-            img.obits__list-bg(src="assets/img/home_obits_bg_r.png" alt="funeral page background")
 
 
