--- a/source/template/common/preplan_content.pug
+++ b/source/template/common/preplan_content.pug
@@ -1,19 +1,26 @@
 .preplan__wrap
     .preplan__title Pre-panning
-    .preplan__content
-        p.
-            There’s a lot that goes into planning a funeral, but making those
-            arrangements beforehand gives you time to consider all of your options and
-             make sure that you’re covering all of the necessary details.
-        p.
-            You've got to admit it; no one should have to make these decisions for you.
-            Giving a pre-plan to those you love gives everyone greater peace-of-mind.
-        p.
-            Average funeral prices have risen 92% in the past 26 years. Lock in today's
-            prices and prevent a financial surprise later. Planning a funeral ahead of time
-            allows you to pay today’s prices for future services, which protects you and your
-            loved ones against rising costs. What’s more, when you pre-plan with a Dignity Memorial
-            funeral provider, you can you can select a monthly payment plan that fits your budget,
-            giving you peace of mind for the days and years ahead.
+    .preplan__content-wrap
+        .preplan__content-left
+            .preplan__content-left-subtile what is pre-planning and how it works
+            p.
+                There’s a lot that goes into planning a funeral, but making those
+                arrangements beforehand gives you time to consider all of your options and
+                 make sure that you’re covering all of the necessary details.
+            p.
+                You've got to admit it; no one should have to make these decisions for you.
+                Giving a pre-plan to those you love gives everyone greater peace-of-mind.
+            p.
+                Average funeral prices have risen 92% in the past 26 years. Lock in today's
+                prices and prevent a financial surprise later. Planning a funeral ahead of time
+                allows you to pay today’s prices for future services, which protects you and your
+                loved ones against rising costs. What’s more, when you pre-plan with a Dignity Memorial
+                funeral provider, you can you can select a monthly payment plan that fits your budget,
+                giving you peace of mind for the days and years ahead.
+        .preplan__content-right
+    .preplan__underblock
+        .preplan__underblock-text if you have any questions please feel free to get in touch with us
+        a(href="/contacts.html").preplan__link get in touch
+
 
 
