--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -2,7 +2,7 @@ $blue: #4990c8;
 $lightBlue: #b6dff5;
 $gray: #4a5963;
 
-$text: 'Noto+Sans', sans-serif;
+$text: 'Roboto', sans-serif;
 $title: 'Lora', serif;
 
 @mixin font ($size, $name, $color){
