--- a/source/style/common/768.scss
+++ b/source/style/common/768.scss
@@ -1,4 +1,8 @@
 @media(max-width: 768px){
+  .top_line__phone-text{
+    border: 0.5px solid #fff;
+    padding: 2px 7px;
+  }
   .main_header{
     height: 700px;
   }
@@ -29,6 +33,10 @@
   }
   .home__main-tile{
     padding: 30px 0;
+  }
+  .main_header__title-secdesc{
+    width: 70%;
+    margin: 0 auto;
   }
   .home__top-title-wrap{
     text-align: center;
@@ -65,6 +73,21 @@
     font-size: 36px;
   }
   //----------------------------------------------- home obits
+  .obits__home-title{
+    padding: 60px 0;
+  }
+  .home_obits__item{
+    width: 260px;
+  }
+  .home-page__obits-arrow-left, .home-page__obits-arrow-right{
+    margin-top: -60px;
+  }
+  .home-obits__list-wrap{
+    margin-bottom: 90px;
+  }
+  .obits__item-bg-wrap{
+ display: none;
+  }
   .upcoming__title{
     padding: 30px 0;
   }
@@ -220,6 +243,7 @@
   }
   .preplan__title{
     font-size: 36px;
+    padding: 40px 0;
   }
 
   .feedbacks__content-title{
@@ -231,6 +255,10 @@
   }
   .feedback-form__input, .feedback-form__message, .feedback-from__button{
     width: 280px;
+  }
+  .preplan__content-left-subtile{
+    font-size: 28px;
+    padding: 20px 0;
   }
 
  // ------------------------------------------------  contacts
