--- a/source/style/common/home_content.scss
+++ b/source/style/common/home_content.scss
@@ -65,118 +65,90 @@
   text-align: center;
 }
 //------------------------------------------------------  slider
-.obits__slider-wrap{
-  width: 80%;
-  margin: 0 auto;
-  @include flex(row, center, center);
-}
-
 .obits__home-title{
-  @include font(42px, $title, $gray);
   text-align: center;
-  padding: 60px 0 60px 0;
+  padding-top: 90px;
+  padding-bottom: 90px;
+  @include font(42px, $title, $gray);
+}
+.obits__slider-wrap{
+  @include flex(row, center, center);
 }
 .home-obits__list-wrap{
-  width: 96%;
-  min-height: 600px;
-  transform: translateX(2%);
-  @include flex(row, center, center);
-  margin-bottom: 90px;
   position: relative;
-  overflow: hidden;
-}
-.home-page__obits-arrow-left, .home-page__obits-arrow-right{
-  top: 72%;
-  z-index: 9999;
-  position: absolute;
-  cursor: pointer;
-  width: 70px;
-  height: 50px;
-  margin: 15px;
-  opacity: .5;
-  &:hover{
-    opacity: .7;
-  }
-}
-.home-page__obits-arrow-left{
-  left: 0;
-}
-.home-page__obits-arrow-right{
-  right: 0;
-}
-.obits__arrow-icon{
-  cursor: pointer;
-  width: 100%;
-  height: 100%;
+  @include flex(row, center, center);
+  margin-bottom: 120px;
 }
 .home_obits__list{
-  position: absolute;
-  left: 10px;
-  @include flex(row, center, center);
-  transition: .3s;
-}
-.obits__list-bg, .obits__list-bg-left{
-  z-index: 10;
-  position: absolute;
-  width: 10%;
-  height: 100%;
-}
-.obits__list-bg{
-  right: 0;
-}
-.obits__list-bg-left{
-  left: 0;
+  @include flex(row, space-between, center);
+  padding: 0 30px;
 }
 
-.obits_test_right{
-  margin-right: -30%;
-}
 .home_obits__item{
-  box-sizing: border-box;
-  padding: 15px;
+  position: relative;
+  width: 300px;
+  border: 1px solid #cccccc;
+  padding: 10px;
 }
-.home_obits__item-innerwrap{
-  background: #fff;
-  box-shadow: 2px 2px 10px 4px rgba(0, 0, 0, .4);
-  padding: 5px;
-  width:350px;
+.home_obits__item--middle{
+  margin: 0 30px;
 }
 .obit__img-wrap{
-  background-image: url("/assets/img/obit_bg.jpg");
-  background-size: cover;
-  overflow: hidden;
   margin-bottom: 10px;
-  width: 100%;
-  height: 400px;
+}
+.obit__img{
+  overflow: hidden;
 }
 .obit__img{
   width: 100%;
 }
 
-.obit__firstname, .obit__lastname{
-  padding: 0 15px;
-  @include font (24px, $text, $gray);
-}
-
-.obit_date{
-  @include font (20px, $title, $gray);
-  padding: 15px 0 0 15px;
-}
-.obit_link-wrap{
-  text-align: right;
-  padding-bottom: 15px;
-  padding-right: 15px;
-}
-.obit__link{
-  font-size: 18px;
-  padding: 7px 20px;
-  border: 1px solid $blue;
-  color: $blue;
-  margin-bottom: 20px;
-  transition-duration: .3s;
+.home-page__obits-arrow-left, .home-page__obits-arrow-right{
+  cursor: pointer;
+  width: 50px;
+  opacity: .6;
   &:hover{
-    color: #fff;
-    background: $blue;
+    opacity: .8;
   }
 }
+.obits__arrow-icon{
+  width: 100%;
+}
 
+.obits__item-bg-wrap{
+  width: 250px;
+  position: absolute;
+}
+.obits__item-bg-wrap--left{
+  top: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 10;
+}
+.obits__item-bg-wrap--right{
+  top: 0;
+  right: 0;
+  bottom: 0;
+}
+.obits__list-bg{
+  width: 100%;
+  height: 100%;
+}
+.obit__firstname, .obit__lastname, .obit__date{
+  @include font(22px, $text, $gray);
+  margin-bottom: 10px;
+}
+.obit__link-wrap{
+  position: absolute;
+  bottom: 20px;
+  right: 10px;
+}
+.obit__link{
+  padding: 5px 15px;
+  border: 1px solid $blue;
+  @include font(18px, $text, $blue);
+  &:hover{
+    background: $blue;
+    color: #ffffff;
+  }
+}
