--- a/source/style/common/preplan_content.scss
+++ b/source/style/common/preplan_content.scss
@@ -1,12 +1,51 @@
+.preplan__wrap{
+  margin-bottom: 40px;
+}
 .preplan__title{
   @include font(42px, $title, $gray);
   text-align: center;
-  padding: 30px 0;
+  padding: 90px 0;
   opacity: 0;
   transition: 1.5s;
 }
-.preplan__content{
+.preplan__content-wrap{
+  @include flex(row, center, center);
+  background: url("/assets/img/preplan.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-bottom: 40px;
+}
+.preplan__content-left{
+  background: rgba(#ffffff, .7);
+  width: 50%;
   @include font(20px, $text, $gray);
   line-height: 32px;
-  padding: 10px;
+  padding: 20px;
+}
+.preplan__content-left-subtile{
+  @include font(32px, $text, $gray);
+  text-align: center;
+  padding: 30px 0;
+}
+.preplan__content-right{
+  width: 50%;
+}
+.preplan__underblock{
+  text-align: center;
+}
+.preplan__underblock-text{
+  @include font(22px, $text, $gray);
+  margin-bottom: 40px;
+}
+.preplan__link{
+  padding: 7px 25px;
+  @include font(20px, $text, $blue);
+  box-shadow: 0 0 8px 2px rgba(0, 0, 0, .2);
+  border: solid 1px $blue;
+  transition: .3s;
+
+  &:hover {
+    background: $blue;
+    color: #fff;
+  }
 }
