--- a/source/style/common/preplan_content.scss
+++ b/source/style/common/preplan_content.scss
@@ -13,9 +13,11 @@
   background: url("/assets/img/preplan.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  margin-bottom: 40px;
+  background-position: center;
+  margin-bottom: 90px;
 }
 .preplan__content-left{
+  text-align: left;
   background: rgba(#ffffff, .7);
   width: 50%;
   @include font(20px, $text, $gray);
@@ -24,7 +26,7 @@
 }
 .preplan__content-left-subtile{
   @include font(32px, $text, $gray);
-  text-align: center;
+  text-align: left;
   padding: 30px 0;
 }
 .preplan__content-right{
@@ -32,6 +34,7 @@
 }
 .preplan__underblock{
   text-align: center;
+  margin-bottom: 90px;
 }
 .preplan__underblock-text{
   @include font(22px, $text, $gray);
