--- a/source/template/common/preplan_content.pug
+++ b/source/template/common/preplan_content.pug
@@ -2,24 +2,49 @@
     .preplan__title Pre-panning
     .preplan__content-wrap
         .preplan__content-left
-            .preplan__content-left-subtile what is pre-planning and how it works
-            p.
-                There’s a lot that goes into planning a funeral, but making those
-                arrangements beforehand gives you time to consider all of your options and
-                 make sure that you’re covering all of the necessary details.
-            p.
-                You've got to admit it; no one should have to make these decisions for you.
-                Giving a pre-plan to those you love gives everyone greater peace-of-mind.
-            p.
-                Average funeral prices have risen 92% in the past 26 years. Lock in today's
-                prices and prevent a financial surprise later. Planning a funeral ahead of time
-                allows you to pay today’s prices for future services, which protects you and your
-                loved ones against rising costs. What’s more, when you pre-plan with a Dignity Memorial
-                funeral provider, you can you can select a monthly payment plan that fits your budget,
-                giving you peace of mind for the days and years ahead.
+            .preplan__content-left-subtile What is pre-planning and how it works
+            .preplan__content-text
+                p.
+                    Death is an inevitable part of our lives. Pre-planning your own funeral may seem distressing,
+                    but making all the arrangements beforehand gives you time to consider all of your options and
+                    make sure that you are covering all of the necessary details. You have to admit it; no one
+                    should have to make these decisions for you. Our funeral home will professionally take
+                    care of you and your wishes, taking into account your faith, customs and traditions of
+                    burial rites.
+                p.
+                    When pre-planning your funeral, the first thing you will need to do is to decide between
+                    burial and cremation. Your next step is to consider the type of event you want for your funeral.
+                    There is a range of options from a traditional church funeral to cremation with memorial service or scattering.
+                    Regardless of your decisions, we will support and assist you every step of the way.
+                p.
+                    At our funeral home, we offer a wide range of prepaid burial services from merchandising
+                    (caskets, headstones, urns, etc.) to cemetery arrangements. Just like real estate, the burial
+                    plot gets more expensive as time goes on so the rational thing to do is to plan it ahead of
+                    time allowing you to pay today’s prices for future services, which protects you and your
+                    loved ones against rising costs. No matter when the day will come, in 5 or 20 years,
+                    the cost will stay the same.
+                p.
+                    A prepaid planning at our funeral home is reassuring and it doesn’t carry any risk.
+                    According to the notarized contract, which we are offering, the money will be deposited into the trust account
+                     and will remain untouchable until the day comes and only then we will be able to withdraw it and arrange
+                     everything exactly according to your wishes and requirements. Even if the funeral home goes out of business
+                     the money will remain in the trust fund.
+                    The loss of a loved one is a huge stress itself. Before your family and friends obtain the peace of mind,
+                    they will have to make hundreds of decisions about your funeral, many of which will add to your overall
+                    funeral costs. These costs can add up quickly, and your loved ones may not have the necessary
+                    funds to cover all of the expenses. As a result not all of your wishes will be taken into account.
+                p.
+                    By pre-planning all arrangements now, you will leave your family with fewer difficult choices to make
+                    and expensive bills to pay and ensure that you get the kind of funeral you want. You will also prevent
+                    them from emotionally overspending and arguing over the smallest details.
+                    Preparing for your final expenses now with a final expense plan can easily protect your
+                    family from a significant financial burden in the future and will give you the peace of
+                    mind for days and years ahead. Lock in today’s prices and prevent a financial surprise later.
+
+
         .preplan__content-right
     .preplan__underblock
-        .preplan__underblock-text if you have any questions please feel free to get in touch with us
+        .preplan__underblock-text If you have any questions please feel free to get in touch with us
         a(href="/contacts.html").preplan__link get in touch
 
 
